migrated to java 1.8